--- a/src/sharky.ipynb
+++ b/src/sharky.ipynb
@@ -1256,7 +1256,72 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Desde aqui el modelado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "variables = df[['reclat', 'reclong']]\n",
+    "localizacion = df['GeoLocation']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(variables, localizacion, test_size=0.2, random_state=42)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaler = scaler.fit_transform(X_train)\n",
+    "X_test_scaler = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "modelo_arbol = DecisionTreeClassifier(random_state=42)\n",
+    "modelo_arbol.fit(X_train_scaler, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = modelo_arbol.predict(X_test_scaler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Accuracy: {accuracy}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pickle import dump\n",
+    "\n",
+    "dump(modelo_arbol, open(\"../Models/decision_tree_classifier_default_42.sav\", \"wb\"))"
+   ]
   }
  ],
  "metadata": {
